2013-02-27  Nick Clifton  <nickc@redhat.com>

	* scripttempl/elf32msp430.sc: Add placement of .data.* sections.
	Add alignment of .bss section.
	* scripttempl/elf32msp430_3.sc: Likewise.

2013-02-26  Nick Clifton  <nickc@redhat.com>

	PR ld/15188
	* ld.texinfo: Fix typos.

2013-02-21  Alan Modra  <amodra@gmail.com>

	* scripttempl/elf.sc (.init_array, .fini_array): Don't sort all
	.init_array/.fini_array input sections before .ctors/.dtors input
	sections.
	(CTORS_IN_INIT_ARRAY, DTORS_IN_INIT_ARRAY): Adjust to suit.

2013-02-21  Alan Modra  <amodra@gmail.com>

	* emultempl/elf32.em (write_build_id, setup_build_id): Adjust
	for elf_tdata changes.

2013-02-21  Alan Modra  <amodra@gmail.com>

	* emultempl/elf-generic.em: Use newly defined elf_obj_tdata
	accessor macros.

2013-02-20  Alan Modra  <amodra@gmail.com>

	* Makefile.am: Use $(ELF_DEPS) on a number of eelf*.c rules.
	* Makefile.in: Regenerate.

2013-02-19  Sandra Loosemore  <sandra@codesourcery.com>

	PR ld/15146
	* plugin.c (plugin_notice): Add null check before dereferencing
	pointer.

2013-02-19  Alan Modra  <amodra@gmail.com>

	* emultempl/elf32.em (emit_note_gnu_build_id): New static var.
	Replace all info->emit_note_gnu_build_id refs.
	(id_note_section_size): Rename from
	gld${EMULATION_NAME}_id_note_section_size.
	(struct build_id_info): Delete.
	(write_build_id): Rename from
	gld${EMULATION_NAME}_write_build_id_section.
	Update elf_tdata usage.  Style, formatting.
	(setup_build_id): New function.
	(gld${EMULATION_NAME}_after_open): Use setup_build_id.

2013-02-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/15146
	* plugin.c (plugin_notice): Replace the undefined dummy bfd with
	the real one.

2013-02-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/15141
	* plugin.c (plugin_notice): Also trace symbol from the IR bfd.

2013-02-15  Kai Tietz  <ktietz@redhat.com>

	* scripttempl/pep.sc (.xdata): Merge .xdata* into .xdata section.
	(.pdata): Merge .pdata* into .pdata section.
